[package]
name = "arch-warp-cli"
description = "Scaffold, build, test, and deploy Archway Network Smart Contracts faster than ever before"
version = "0.2.0"
license = "MIT"
edition = "2021"
homepage = "https://archway-warp.github.io/"
repository = "https://github.com/archway-warp/warp-cli"
keywords = ["archway", "blockchain", "productivity", "smart-contracts", "cosmwasm"]
readme = "README.md"

[profile.dev]
opt-level = 3     # Optimize for size.
lto = false          # Enable Link Time Optimization
codegen-units = 24   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = false        # Automatically strip symbols from the binary.


[profile.release]
opt-level = "s"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
toml = "0.5.10"
serde = { version = "1.0.151", default-features = false, features = [ "derive" ] }
serde_json = "1.0.91"
thiserror = "1.0.38"
regex = "1.7.0"
rpassword = "7.2.0"
owo-colors = "3.5.0"

[[bin]]
name = "warp"
path = "src/main.rs"